added getByGenre to fiction and nonfiction, updated swagger doc
