# routes/fiction.js
@@ -9,6 +9,8 @@ router.get('/', fictionController.getAll);
 
 router.get('/:id', fictionController.getSingle);
 
+router.get('/genre/:genre', fictionController.getByGenre);
+
 router.post('/', isAuthenticated, validation.saveBook, fictionController.createBook);
 
 router.put('/:id', isAuthenticated, validation.saveBook, fictionController.updateBook);
